fix header align

--- a/lex-reporter/force-app/main/default/lwc/tableHeader/tableHeader.css
+++ b/lex-reporter/force-app/main/default/lwc/tableHeader/tableHeader.css
@@ -1,4 +1,4 @@
 .column-cell{
-    text-align: center;
+    /* text-align: center; */
     overflow-x: clip;
 }
